2005-02-12  Naba Kumar  <naba@gnome.org>

	* plugins/project-wizard/property.c: Fixed hidden
	properties to take values.

	* plugins/project-wizard/file.[ch]: Renamed
	true/false enum values to fix compile error
	(conflict with other definition).
	
	* plugins/file-loader/plugin.c: Detect anjuta projects correctly
	even when mime type detection fails (for example, when Anjuta is
	installed in non-system prefix).

2005-02-12  Sebastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/values.c,
	plugins/project-wizard/values.h:
	Rewrite file with more comments

	* plugins/project-wizard/druid.c,
	plugins/project-wizard/druid.h,
	plugins/project-wizard/autogen.c,
	plugins/project-wizard/autogen.h,
	plugins/project-wizard/druid.c,
	plugins/project-wizard/druid.h:
	Add more comments
	Use values instead of properties
	Move default properties to druid.c

	* plugins/project-wizard/install.c,
	plugins/project-wizard/install.h:
	Use values instead of properties
	Add a check to avoid overwriting files

	* plugins/project-wizard/parser.c,
	plugins/project-wizard/property.c,
	plugins/project-wizard/property.h:
	Update to use new values
	Add an "exist" attribute to check if a directory already exist

	* plugins/project-wizard/anjuta-project-wizard.glade:
	Change project selection page (GtkTextView => GtkLabel,
	GtkTable => GtkVBox)

	* plugins/project-wizard/templates/terminal.wiz:
	Move destination directory on second page
	
	* plugins/project-wizard/action.c:
	Add a few comments

2005-02-12  Naba Kumar  <naba@gnome.org>

	* plugins/file-manager/an_file_view.c,
	plugins/symbol-browsers/an_symbol_view.c: Removed rules hint from the
	views. Created dynamic update date of view depending on project
	changes -- similar to file-manager view.
	
	* plugins/devhelp/plugin.c: Load help on idle.
	
	* plugins/editor/anjuta-document-manager.glade: Moved 'disable
	autoformat' to proper location in preferences.
	
	* mime/anjuta.mime: Added .prj extension in the mime type for backward