@@ -1,3 +1,3 @@
-wizard_filesdir = $(anjuta_data_dir)/project/gnome/src
+wizard_filesdir = $(anjuta_data_dir)/project/gtk/src
 wizard_files_DATA = main.c callbacks.c callbacks.h interface.c interface.h support.c support.h Makefile.am.tpl project.glade
 EXTRA_DIST = $(wizard_files_DATA)
