@@ -3,8 +3,7 @@
 
 [+IF (=(get "IncludeGNUHeader") "1") +]/*
 	support.h
-	Copyright (C) [+Author+]
-
+	Copyright (C) [+Author+]	Copyright (C) [+Author+] [+(shell "date +%Y")+] <[+Email+]>
 [+(gpl "support.h"  "\t")+]
 */[+ENDIF+]
 
